# transcript

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.claude/commands/: speak.md  transcribe.md
crates/transcript-cli/: Cargo.toml
crates/transcript-cli/src/: main.rs
crates/transcript-core/: Cargo.toml
crates/transcript-core/src/: audio.rs  lib.rs  models.rs  resample.rs  transcribe.rs
src/: app.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  transcripts.rs
src/lib/: ipc.ts
src/routes/: +page.svelte
