[workspace]
resolver = "2"
members = [
    "crates/transcript-core",
    "crates/transcript-cli",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Thibaut Baissac"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
