[package]
name = "transcript"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "transcript_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
parking_lot = "0.12"
hound = "3"

transcript-core = { path = "../crates/transcript-core" }
